security: UserRecord and providers, Csrf protection

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,5 +8,6 @@ include(
         ":common",
         ":kontainer",
         ":meta",
-        ":mutator"
+        ":mutator",
+        ":security"
 )
